--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gaung",
+  "name": "recodo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -33,6 +33,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.19.8",
+    "workbox-window": "^7.0.0"
   }
 }
