--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: deploy
 on:
   push:
-    branches: [master]
+    branches: [main]
 env:
   SHARP_INSTALL_FORCE: true
-  APP_BASE_PATH: duai/
+  APP_BASE_PATH: /recodo/
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bun run build
+      - run: bun run build --base=$APP_BASE_PATH
       - name: Recreate gh-pages branch
         run: git checkout -b gh-pages
       - name: Promote build
