--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,20 +2,33 @@ name: deploy
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 env:
   SHARP_INSTALL_FORCE: true
   APP_BASE_PATH: /recodo/
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v1
       - run: bun install
       - run: bun run build --base=$APP_BASE_PATH
-      - name: Recreate gh-pages branch
-        run: git checkout -b gh-pages
-      - name: Promote build
-        run: mv dist /tmp/dist && ls | grep -v ".git" | xargs rm -r && mv /tmp/dist/* .
-      - name: Publish build
-        run: git config --global user.email "ci@github.com" && git config --global user.name "Github CI" && git add --all && git commit -m "updated build" && git push --set-upstream origin gh-pages --force
+      - uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './dist/'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
